--- a/TaskManager_redesign/Theme.xaml
+++ b/TaskManager_redesign/Theme.xaml
@@ -890,4 +890,38 @@
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
+
+    <Style x:Key="TasksListFiltered" TargetType="ListView">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="ItemContainerStyle" Value="{DynamicResource TasksListItemsFiltered}"/>
+    </Style>
+    
+    <Style x:Key="TasksListItemsFiltered" TargetType="ListViewItem">
+        <Setter Property="Background" Value="White"/>
+        <Setter Property="BorderBrush" Value="#FFF6F6F6"/>
+        <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListViewItem">
+                    <Grid x:Name="ItemGrid" Background="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Background}">
+                        <Border x:Name="ItemBorder" BorderBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderBrush}" 
+                                BorderThickness="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness}">
+                            <TextBlock Text="{Binding}" Padding="10" Style="{DynamicResource h3}"/>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" TargetName="ItemGrid" Value="{DynamicResource MainUserControl.MouseOver}"/>
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="BorderBrush" TargetName="ItemBorder" Value="Red"/>
+                            <Setter Property="BorderThickness" TargetName="ItemBorder" Value="1"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
