--- a/TaskManager_redesign/Controls/TasksFiltered.xaml
+++ b/TaskManager_redesign/Controls/TasksFiltered.xaml
@@ -20,14 +20,33 @@
         </Grid>
         <Grid Grid.Row="1" Name="TasksGrid">
             <ListView Name="tasksList" Margin="10" ItemsSource="{Binding Source={StaticResource MainViewModel}, Path=UserTasks}" Style="{StaticResource TasksListFiltered}">
-                
+                <e:Interaction.Triggers>
+                    <e:EventTrigger EventName="MouseDoubleClick">
+                        <e:InvokeCommandAction Command="{Binding Source={StaticResource MainViewModel}, Path=CollapseAllCommand}"/>
+                    </e:EventTrigger>
+                </e:Interaction.Triggers>
                 <ListView.GroupStyle>
                     <GroupStyle>
-                        <GroupStyle.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock FontSize="18" Margin="10" Foreground="White" Style="{StaticResource h1}" Text="{Binding Name}"/>
-                            </DataTemplate>
-                        </GroupStyle.HeaderTemplate>
+                        <GroupStyle.ContainerStyle>
+                            <Style TargetType="GroupItem">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="GroupItem">
+                                            <Expander IsExpanded="True" Style="{StaticResource ExpanderStyle}">
+                                                <Expander.Header>
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock FontSize="18" Margin="10 10 0 10" Foreground="White" Style="{StaticResource h1}" Text="{Binding Name}"/>
+                                                        <TextBlock FontSize="18" Margin="0 10"  Foreground="White" Style="{StaticResource h1}" Text="{Binding ItemCount, StringFormat={} (0)}"/>
+                                                    </StackPanel>
+                                                </Expander.Header>
+                                                
+                                                <ItemsPresenter/>
+                                            </Expander>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </GroupStyle.ContainerStyle>
                     </GroupStyle>
                 </ListView.GroupStyle>
             </ListView>
