--- a/TaskManager_redesign/Theme.xaml
+++ b/TaskManager_redesign/Theme.xaml
@@ -145,7 +145,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border Background="Transparent" Height="15" Padding="0" Width="15">
+                    <Border Background="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Background}" Height="15" Padding="0" Width="15">
                         <Image Source="\res\dropdown2.png" Width="15" Height="15" Name="ExpandPath"/>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -163,7 +163,54 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
+    <Style TargetType="{x:Type Expander}" x:Key="ExpanderStyle">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Expander}">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition x:Name="ContentRow"
+                           Height="0" />
+                        </Grid.RowDefinitions>
+                        
+                        <Border x:Name="Border"
+                  Grid.Row="0"
+                  BorderThickness="1"
+                  CornerRadius="2,2,0,0">
+                            
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="20" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                    <ToggleButton OverridesDefaultStyle="True" Style="{DynamicResource ExpandCollapseToggleStyle}" IsChecked="{Binding IsExpanded, Mode=TwoWay,  RelativeSource={RelativeSource TemplatedParent}}" Background="White"/>
+                                
+                                <ContentPresenter Grid.Column="1"
+                                Margin="4"
+                                ContentSource="Header"
+                                RecognizesAccessKey="True" />
+                            </Grid>
+                        </Border>
+                        <Border x:Name="Content"
+                  Grid.Row="1">
+                            <ContentPresenter Margin="4" />
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsExpanded"
+                   Value="True">
+                            <Setter TargetName="ContentRow"
+                    Property="Height"
+                    Value="{Binding Height, ElementName=Content}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="placeHolder" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
         <Setter Property="Template">
             <Setter.Value>
